--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -1,7 +1,7 @@
 <% thisClient = Client.find(@invoice.clientid) %>
 <% thisProject = Project.find(@invoice.projectid) %>
 
-<header>
+<header class="pad">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
