--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,7 @@
 				<% else %>
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>In-Progress</h2>
+						<h3 class="text-center red"><i class="fa fa-refresh left"></i>In-Progress</h3>
 						<table class="table table-condensed">
 							<thead>
 								<tr>
@@ -29,7 +29,7 @@
 						</table>
 					</div>
 					<div class="col-sm-6">
-						<h2>Completed</h2>
+						<h3 class="text-center green"><i class="fa fa-check left"></i>Completed</h3>
 						<table class="table table-condensed">
 							<thead>
 								<tr>
