--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -43,7 +43,7 @@
 jQuery(document).ready(function($) {
   var chart = new CanvasJS.Chart('monthlyRevenueChart', {
   	title: {
-  		fontFamily: 'Helvetica Neue, Helvetica, sans-serif',
+  		fontFamily: 'brandon-grotesque, sans-serif',
   		fontSize: 24,
   		text: 'Revenue by Month'
   	},
