--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -38,7 +38,7 @@
 
 <%= yield %>
 
-<footer>
+<footer class="pad">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
