--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,7 +10,10 @@
 				<%= image_tag(thisClient.logo.url(:medium), class: 'pull-right hidden-xs') %>
 				<% end %>
 				<h1><%= @project.name %></h1>
-				<p>
+				<p class="doicons">
+					<%= link_to edit_project_path(@project), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
+					<%= link_to project_path(@project), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Project ##{@project.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
+				</p>
 					<strong>Project ID:</strong>
 					<%= @project.id %>
 				</p>
@@ -70,7 +73,6 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<p><%= link_to edit_project_path(@project), { :class => 'btn btn-warning' } do %><i class="fa fa-pencil-square-o left"></i>Edit<% end %> <%= link_to project_path(@project), method: :delete, data: { confirm: "Are you sure you would like to delete Project ##{@project.id}?" }, class: 'btn btn-danger' do %><i class="fa fa-trash-o left"></i>Delete<% end %>
 				<p><%= link_to 'Back', projects_path %></p>
 			</div>
 		</div>
