--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -18,8 +18,12 @@
   	}
   	
   	header img {
-	  	max-width: 200px;
+	  	max-width: 100px;
 	  	max-height: 80px;
+  	}
+  	
+  	p.indent {
+	  	margin-left: 4em;
   	}
   	
   	footer .container {
