--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -45,6 +45,7 @@ jQuery(document).ready(function($) {
   	title: {
   		fontFamily: 'brandon-grotesque, sans-serif',
   		fontSize: 24,
+  		fontWeight: 'normal',
   		text: 'Revenue by Month'
   	},
   	axisX: {
