--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header class="pad">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 text-center">
-				<h1><%= company_full_name %></h1>
+			<div class="col-sm-4 col-sm-offset-4 text-center">
+				<img src="<%= company_text_logo_url %>" alt="<%= company_full_name %>">
 			</div>
 		</div>
 	</div>
