More aesthetic tweaks

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-4 text-center">
-				<img src="<%= company_text_logo_url %>" alt="<%= company_full_name %>">
+				<a href="/"><img src="<%= company_text_logo_url %>" alt="<%= company_full_name %>"></a>
 			</div>
 		</div>
 	</div>
