--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -68,7 +68,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<% Invoice.where(clientid: @client.id).each do |invoice| %>
+						<% Invoice.where(clientid: @client.id).sort { |a,b| a.date <=> b.date }.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
