--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -8,7 +8,7 @@
 				<% @today = Date.today %>
 				<h2><%= @today.year %> Invoices</h2>
 				<div class="row">
-					<div class="col-sm-9">
+					<div class="col-sm-12">
 						<% if @invoices.blank? %>
 						<p class="lead">No invoices.</p>
 						<% else %>
@@ -16,6 +16,7 @@
 							<thead>
 								<tr>
 									<th>Client</th>
+									<th class="hidden-xs">Project</th>
 									<th>Date</th>
 									<th class="text-center hidden-xs">Type</th>
 									<th class="text-right hidden-xs">Cost</th>
@@ -26,6 +27,7 @@
 								<% @invoices.where("strftime('%Y', date) + 0 = ?", @today.year).sort { |a,b| a.date <=> b.date }.each do |invoice| %>
 								<tr id="invoicerow<%= invoice.id %>">
 									<td><%= link_to Client.find(invoice.clientid) do %><%= Client.find(invoice.clientid).name %><% end %></td>
+									<td class="hidden-xs"><%= link_to Project.find(invoice.projectid) do %><%= Project.find(invoice.projectid).name %><% end %></td>
 									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 									<td class="text-center hidden-xs"><% if invoice.worktype == 'Contract' %>C<% elsif invoice.worktype == 'Hourly' %>H<% elsif invoice.worktype == 'Retainer' %>R<% end %></td>
 									<td class="text-right hidden-xs"><% if invoice.cost %>$<%= number_with_precision(invoice.cost, :precision => 2, :delimiter => ',') %><% else %>&mdash;<% end %></td>
@@ -35,9 +37,6 @@
 							</tbody>
 						</table>
 						<% end %>
-					</div>
-					<div class="col-sm-3">
-						<p class="lead text-center">Total Owed: <span class="currency red">$<%= number_with_precision(total_invoiced_unpaid, :precision => 2, :delimiter => ',') %></span></p>	
 					</div>
 				</div>
 				<%= render 'layouts/financialdash' %>
