--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -1,3 +1,9 @@
+<% @today = Date.today %>
+<div class="row">
+	<div class="col-sm-12">
+		<p class="lead text-center">Total Owed: <span class="currency red">$<%= number_with_precision(total_invoiced_unpaid, :precision => 2, :delimiter => ',') %></span></p>
+	</div>
+</div>
 <div class="row">
 	<div class="col-sm-3">
 		<h3 class="text-center"><%= @today.strftime('%B') %></h3>
