--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -9,6 +9,11 @@
   <%= wicked_pdf_stylesheet_link_tag "style" %>
   <%= wicked_pdf_stylesheet_link_tag "pdf-style" %>
   <style>
+  	body {
+  		color: #000000;
+	  	background: none;
+  	}
+  	
   	.hidden-print {
 	  	display: none;
   	}
