--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -27,7 +27,7 @@
 				<%= f.label :date, 'Invoice Date' %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<%= f.text_field :date, class: 'form-control' %>
+					<%= f.text_field :date, :placeholder => 'YYYY-MM-DD', class: 'form-control' %>
 				</div>
 			</div>
 		</div>
@@ -54,7 +54,7 @@
 		<div class="col-sm-8">
 			<div class="form-group">
 				<%= f.label :description %>
-				<%= f.text_area :description, class: 'form-control' %>
+				<%= f.text_area :description, class: 'form-control', value: 'This invoice represents work on ' %>
 			</div>
 		</div>
 	</div>
@@ -74,7 +74,7 @@
 				<%= f.label :paiddate, 'Paid Date' %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<%= f.text_field :paiddate, class: 'form-control' %>
+					<%= f.text_field :paiddate, :placeholder => 'YYYY-MM-DD', class: 'form-control' %>
 				</div>
 			</div>
 		</div>
