--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -45,7 +45,7 @@
 					<%= @invoice.paiddate.to_formatted_s(:long) %>
 				</p>
 				<p>
-					<strong>Payment Type:</strong>
+					<strong>Payment Method:</strong>
 					<%= @invoice.paymenttype %>
 				</p>
 				<% end %>
