Added date picker

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -27,7 +27,7 @@
 				<%= f.label :date, 'Invoice Date' %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<%= f.text_field :date, :placeholder => 'YYYY-MM-DD', class: 'form-control' %>
+					<%= f.text_field :date, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 				<%= f.label :paiddate, 'Paid Date' %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<%= f.text_field :paiddate, :placeholder => 'YYYY-MM-DD', class: 'form-control' %>
+					<%= f.text_field :paiddate, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
 		</div>
