--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -27,7 +27,7 @@
 				<%= f.label :date, 'Invoice Date' %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<%= f.text_field :date, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
+					<%= f.text_field :date, :required => true, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
 		</div>
@@ -36,7 +36,7 @@
 				<%= f.label :cost %>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-usd"></i></span>
-					<%= f.text_field :cost, class: 'form-control text-right' %>
+					<%= f.text_field :cost, :placeholder => '0.00',class: 'form-control text-right' %>
 				</div>
 			</div>
 		</div>
