Added mobile viewport settings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
 <head>
   <title><%= company_abbrv_name %> Biz Admin</title>
   
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
+  
   <!-- Fav and touch icons -->
   <link rel="apple-touch-icon-precomposed" href="<%= company_favicon_url %>">
   <link rel="shortcut icon" href="<%= company_favicon_url %>">
