--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,14 +3,17 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-users left"></i>Clients<% end %>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-folder-open-o left"></i>Projects<% end %>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-usd left"></i>Invoices<% end %>
+					</div>
+					<div class="col-sm-3">
+						<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
 					</div>
 				</div>
 			</div>
