--- a/app/assets/stylesheets/bootstrap-mods.css.scss
+++ b/app/assets/stylesheets/bootstrap-mods.css.scss
@@ -1,21 +1,13 @@
-/* Bootstrap mods */
+/* Bootstrap Mods */
 
 .btn.btn-left {
-	-webkit-border-top-right-radius: 0px;
-	-webkit-border-bottom-right-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-moz-border-radius-bottomright: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
+	@include border-radius-top-right(0px);
+	@include border-radius-bottom-right(0px);
 }
 
 .btn.btn-right {
-	-webkit-border-top-left-radius: 0px;
-	-webkit-border-bottom-left-radius: 0px;
-	-moz-border-radius-topleft: 0px;
-	-moz-border-radius-bottomleft: 0px;
-	border-top-left-radius: 0px;
-	border-bottom-left-radius: 0px;
+	@include border-radius-top-left(0px);
+	@include border-radius-bottom-left(0px);
 }
 
 i.fa.right {
