Added client addresses. Accounts for international clients

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -75,6 +75,10 @@ footer #footer-logo {
 	margin: 0px;
 }
 
+#client-edit .clientimage {
+	margin-top: 15px;
+}
+
 #monthlyRevenueChart {
 	width: 100%;
 	min-height: 300px;
