--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -1,50 +1,50 @@
 <% @today = Date.today %>
 <div class="row">
 	<div class="col-sm-12">
-		<p class="lead text-center">Total Owed: <span class="currency red">$<%= number_with_precision(total_invoiced_unpaid, :precision => 2, :delimiter => ',') %></span></p>
+		<p class="lead text-center">Total Receivable: <span class="currency red"><%= number_to_currency(total_invoiced_unpaid, { :negative_format => '(%n)' }) %></span></p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-sm-3">
 		<h3 class="text-center"><%= @today.strftime('%B') %></h3>
-		<p class="lead">Paid: <span class="pull-right currency green">$<%= number_with_precision(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @today.month).sum('cost'), :precision => 2, :delimiter => ',') %></span></p>
+		<p class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
 		<hr>
 		<p class="lead">
-			Contract: <span class="pull-right currency text-info">$<%= number_with_precision(Invoice.where(worktype: 'Contract').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Hourly: <span class="pull-right currency text-warning">$<%= number_with_precision(Invoice.where(worktype: 'Hourly').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Retainer: <span class="pull-right currency text-muted">$<%= number_with_precision(Invoice.where(worktype: 'Retainer').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), :precision => 2, :delimiter => ',') %></span>
+			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</p>
 	</div>
 	<% @lastmonth = 1.month.ago %>
 	<div class="col-sm-3">
 		<h3 class="text-center"><%= @lastmonth.strftime('%B') %>&nbsp;<%= @lastmonth.strftime('%Y') %></h3>
-		<p class="lead">Paid: <span class="pull-right currency green">$<%= number_with_precision(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @lastmonth.month).sum('cost'), :precision => 2, :delimiter => ',') %></span></p>
+		<p class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @lastmonth.month).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
 		<hr>
 		<p class="lead">
-			Contract: <span class="pull-right currency text-info">$<%= number_with_precision(Invoice.where(worktype: 'Contract').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Hourly: <span class="pull-right currency text-warning">$<%= number_with_precision(Invoice.where(worktype: 'Hourly').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Retainer: <span class="pull-right currency text-muted">$<%= number_with_precision(Invoice.where(worktype: 'Retainer').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), :precision => 2, :delimiter => ',') %></span>
+			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%m', date) + 0 = ?", @lastmonth.month).sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</p>
 	</div>
 	<div class="col-sm-3">
 		<h3 class="text-center"><%= @today.year %> YTD</h3>
-		<p class="lead">Paid: <span class="pull-right currency green">$<%= number_with_precision(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @today.year).sum('cost'), :precision => 2, :delimiter => ',') %></span></p>
+		<p class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
 		<hr>
 		<p class="lead">
-			Contract: <span class="pull-right currency text-info">$<%= number_with_precision(Invoice.where(worktype: 'Contract').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Hourly: <span class="pull-right currency text-warning">$<%= number_with_precision(Invoice.where(worktype: 'Hourly').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Retainer: <span class="pull-right currency text-muted">$<%= number_with_precision(Invoice.where(worktype: 'Retainer').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), :precision => 2, :delimiter => ',') %></span>
+			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</p>
 	</div>
 	<% @lastyear = Date.today.year - 1 %>
 	<div class="col-sm-3">
 		<h3 class="text-center"><%= @lastyear %></h3>
-		<p class="lead">Paid: <span class="pull-right currency green">$<%= number_with_precision(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @lastyear).sum('cost'), :precision => 2, :delimiter => ',') %></span></p>
+		<p class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @lastyear).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
 		<hr>
 		<p class="lead">
-			Contract: <span class="pull-right currency text-info">$<%= number_with_precision(Invoice.where(worktype: 'Contract').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Hourly: <span class="pull-right currency text-warning">$<%= number_with_precision(Invoice.where(worktype: 'Hourly').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), :precision => 2, :delimiter => ',') %></span><br>
-			Retainer: <span class="pull-right currency text-muted">$<%= number_with_precision(Invoice.where(worktype: 'Retainer').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), :precision => 2, :delimiter => ',') %></span>
+			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
+			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%Y', date) + 0 = ?", @lastyear).sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</p>
 	</div>
 </div>
