--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -3,10 +3,10 @@
   <td><%= line.description %></td>
   <% if !line.hours.blank? %>
   <td class="text-center"><%= line.hours %></td>
-  <td class="text-center"><%= number_with_precision(line.rate, :precision => 2) %></td>
+  <td class="text-center"><%= number_to_currency(line.rate, { :unit => ''}) %></td>
   <% else %>
   <td class="text-center">&mdash;</td>
   <td class="text-center">&mdash;</td>
   <% end %>
-  <td><div class="pull-right"><%= number_with_precision(line.total, :precision => 2) %></div>$</td>
+  <td><div class="pull-right"><%= number_to_currency(line.total, { :unit => '', :negative_format => '(%n)' }) %></div>$</td>
 </tr>
