--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -57,13 +57,13 @@
 						<% Invoice.where(projectid: @project.id).sort { |a,b| a.date <=> b.date }.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-							<td class="text-right"><% if invoice.cost %>$<%= number_with_precision(invoice.cost, :precision => 2, :delimiter => ',') %><% projectInvoiceTotal += invoice.cost else %>&mdash;<% end %></td>
+							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% projectInvoiceTotal += invoice.cost else %>&mdash;<% end %></td>
 							<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
 						</tr>
 						<% end %>
 						<tr>
 							<td class="text-right"><strong>Total</strong></td>
-							<td class="text-right"><strong>$<%= number_with_precision(projectInvoiceTotal, :precision => 2, :delimiter => ',') %></strong></td>
+							<td class="text-right"><strong><%= number_to_currency(projectInvoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
 							<td>&nbsp;</td>
 						</tr>
 					</tbody>
