Tightened up code and style in a few places

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -43,6 +43,14 @@ ul {
 	padding: 2em 0px;
 }
 
+p.lead.halfbottom {
+	margin-bottom: 10px;
+}
+
+hr.halfbottom {
+	margin: 10px 0px;
+}
+
 section {
 	color: #000000;
 	background: #ffffff;
