--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -49,6 +49,7 @@
 				<p><%= @invoice.description %> <%= invoice_description_suffix %></p>
 				<p class="indent">Thank you,<br><%= company_pay_to %><br><%= company_full_name %><br><%= company_email %><br><%= company_phone %></p>
 				<hr>
+				<% if !@invoice.lines.blank? %>
 				<table class="table table-condensed">
 		      <thead>
 		        <tr>
@@ -78,6 +79,7 @@
 			      </tr>
 			    </tbody>
 			  </table>
+			  <% end %>
 			</div>
 		</div>
 	</div>
